@@ -3,7 +3,7 @@ import cssutils
 import xml.dom
 
 EXPOUT = u'''\n--- source CSS ---\n/* This is a comment */\n    body {\n        background: white;\n        top: red;\n        x: 1;\n        }\n    a { y }\n            \n\n--- simple parsing ---\n/* This is a comment */\nbody {\n    background: white;\n    top: red;\n    x: 1\n    }\n\n--- CSSParser(raiseExceptions=True) ---\n:::RAISED::: Property: No ":" after name found: u\'y \' [7:10:  ]\n'''
-EXPERR = u'''Property: Invalid value for  property "top: red".\nProperty: Unknown Property: u\'x\'. [5:9: x]\nProperty: No ":" after name found: u\'y \' [7:10:  ]\nProperty: No property value found: u\'y \'. [7:10:  ]\nCSSStyleDeclaration: Syntax Error in Property: y \nProperty: Invalid value for  property "top: red".\nProperty: Unknown Property: u\'x\'. [5:9: x]\n'''
+EXPERR = u'''Property: Invalid value for CSS Level 2.1 property "top: red".\nProperty: Unknown Property: u\'x\'. [5:9: x]\nProperty: No ":" after name found: u\'y \' [7:10:  ]\nProperty: No property value found: u\'y \'. [7:10:  ]\nCSSStyleDeclaration: Syntax Error in Property: y \nProperty: Invalid value for CSS Level 2.1 property "top: red".\nProperty: Unknown Property: u\'x\'. [5:9: x]\n'''
 
 def main():
 
